--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,6 +1,5 @@
 html {
     box-sizing: border-box;
-
 }
 
 *,
@@ -27,18 +26,19 @@ body {
     color: #6A6C6F;
     display: flex;
     flex-direction: column;
-
+    font-family: "Dosis", sans-serif;
 }
+
+
 
 header {
     width: 100%;
     height: 60px !important;
     margin: 0;
     padding: 0 5px;
-    background-color: #F7F9FA;
+    background-color: white;
     border-bottom: 1px solid #6a6c6f28;
     transition: all 0.3s ease;
-
     display: flex;
     justify-content: end;
 }
@@ -52,6 +52,10 @@ footer {
     border-top: 1px solid #eaeaea;
     flex-shrink: 0;
 }
+
+
+main {}
+
 
 .color-conecta {
     color: #34495e00;
@@ -68,6 +72,7 @@ footer {
     padding: 0 10px;
     height: 60px;
     width: 100%;
+
 }
 
 
@@ -85,11 +90,68 @@ footer {
     display: flex;
     align-items: center;
     height: 50px !important;
+    font-size: larger;
 }
 
 .logoQR_img {
-    height: 48px;
+    height: 40px;
     border-radius: 10px;
     margin-right: 10px;
 
+}
+
+
+.titulo {
+    font-weight: 600;
+    font-size: 1.5em;
+    margin: 0;
+    transition: all 0.3s ease;
+}
+
+.container {
+    height: 500px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.texto {
+    width: 80%;
+}
+
+.caja {
+    border-top: 5px solid #FB5B5B;
+}
+
+.logoGrande {
+
+    width: 50%;
+}
+
+.mobiles {
+    position: relative;
+    top: 20px;
+}
+
+.img_cel_1 {
+    position: absolute;
+    z-index: 99;
+    height: 500px;
+    filter: drop-shadow(10px 10px 10px #5d5d5d44);
+    border-radius: 10px;
+}
+
+.img_cel_2 {
+    position: absolute;
+    z-index: 50;
+    height: 450px;
+    left: 200px;
+    top: 50px;
+    transform: rotate(20deg);
+    filter: drop-shadow(10px 10px 10px #5d5d5d44);
+    border-radius: 10px;
+}
+
+.seccion_descarga {
+    background-color: #6A6C6F;
 }
